lang2/macro/tests/ui/fail/19-unknown-struct-ink-marker.stderr
error: encountered unsupported ink! markers for struct
 --> $DIR/19-unknown-struct-ink-marker.rs:8:5
  |
8 | /     #[ink(unknown_or_unsupported)]
9 | |     struct HasUnknownMarker {}
  | |______________________________^

error: unsupported ink! marker for struct
 --> $DIR/19-unknown-struct-ink-marker.rs:8:10
  |
8 |     #[ink(unknown_or_unsupported)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
